<resources>
    <string name="app_name">TIL</string>
    <string name="greeting">Hello! Tap the button to begin learning. Long press to share. Tap me to read more.</string>
    <string name="about_menu">About</string>
    <string name="greater_compat">API is or larger than 16.</string>
    <string name="lesser_compat">API is less than 16.</string>
    <string name="night_mode">Night Mode</string>
    <string name="night_mode_en">Night mode enabled!</string>
    <string name="night_mode_den">Night mode disabled!</string>
    <string name="loading">Loading more facts &#8230;</string>
    <string name="loaded">Loading complete!</string>
    <string name="loading_error">Error while loading data. Oops.</string>
    <string name="menu_by_hot">Hot</string>
    <string name="menu_by_top">Top</string>
    <string name="menu_by_new">New</string>
    <string name="share_prompt">Share this fact:</string>
</resources>
